fix stretched images by applying object-fit: cover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@ label {
     border: solid 2px;
     border-radius: 10px;
     margin-left: 2vw;
+    object-fit: cover;
 }
 
 #randori {
@@ -172,6 +173,7 @@ label {
     border-radius: 10px;
     margin-right: 2vw;
     margin-top: 2vw;
+    object-fit: cover;
 }
 
 .textbox {
